--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@pixi/react": "^8.0.4",
     "next": "16.0.5",
+    "pixi.js": "^8.14.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
