--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-globe.gl": "^2.37.0",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
   },
