--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@splinetool/react-spline": "^4.1.0",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
@@ -29,8 +30,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-globe.gl": "^2.37.0",
-    "swiper": "^12.0.3",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "three-globe": "^2.45.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
