--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@pixi/react": "^8.0.4",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.2",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@react-three/postprocessing": "^3.0.4",
     "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.28",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "aos": "^2.3.4",
